improvements -- added score repository
