# src/main/java/ch/artquizrunner/controller/QuizController.java
@@ -5,10 +5,12 @@ import java.util.logging.Logger;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
+import javax.validation.Valid;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.CrossOrigin;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
@@ -19,6 +21,8 @@ import ch.artquizrunner.model.QuizState;
 import ch.artquizrunner.service.QuizEngineService;
 import ch.artquizrunner.util.JWTProcessor;
 import ch.artquizrunner.util.QuizCookieGenerator;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.parameters.RequestBody;
 
 @RestController
@@ -41,8 +45,13 @@ public class QuizController implements QuizApi {
     private JWTProcessor jwtProcessor;
 
     @Override
-    public ResponseEntity<QuizState> getInitialQuizState() {
-        QuizState state = quizEngineService.getInitialQuizState();
+    public ResponseEntity<QuizState> getInitialQuizState(
+            @Parameter(name = "username", description = "the username of the player", schema = @Schema(description = "")) @Valid @RequestParam(value = "username", required = false) String username) {
+
+        if (username.length() > 30)
+            return ResponseEntity.badRequest().build();
+
+        QuizState state = quizEngineService.getInitialQuizState(username);
 
         try {
             String jwtState = jwtProcessor.generateAndSignQuizStateToken(state);
