# src/main/java/ch/artquizrunner/entity/ScoreEntity.java
@@ -1,0 +1,58 @@
+package ch.artquizrunner.entity;
+
+import java.util.Objects;
+
+import org.springframework.data.annotation.Id;
+import org.springframework.data.mongodb.core.mapping.Document;
+
+@Document(collection = "score")
+public class ScoreEntity {
+
+    @Id
+    private Long id;
+
+    private String username;
+
+    private Long score;
+
+    public Long getId() {
+        return id;
+    }
+
+    public void setId(Long id) {
+        this.id = id;
+    }
+
+    public String getUsername() {
+        return username;
+    }
+
+    public void setUsername(String username) {
+        this.username = username;
+    }
+
+    public Long getScore() {
+        return score;
+    }
+
+    public void setScore(Long score) {
+        this.score = score;
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(score, username);
+    }
+
+    @Override
+    public boolean equals(Object obj) {
+        if (this == obj)
+            return true;
+        if (obj == null)
+            return false;
+        if (getClass() != obj.getClass())
+            return false;
+        ScoreEntity other = (ScoreEntity) obj;
+        return Objects.equals(score, other.score) && Objects.equals(username, other.username);
+    }
+}
